# practice

./: .gitignore
algorithm_training/: CMakeLists.txt
algorithm_training/noobs_round_2_2021/: A  A.cpp  B.cpp  C.cpp  D.cpp
