cmake_minimum_required(VERSION 3.17)
project(algorithm_training)

set(CMAKE_CXX_STANDARD 14)
include_directories(/usr/local/include)
add_executable(A noobs_round_2_2021/A.cpp)
add_executable(B noobs_round_2_2021/B.cpp)
add_executable(C noobs_round_2_2021/C.cpp)
add_executable(D noobs_round_2_2021/D.cpp)